Fixed table contrast

--- a/app/assets/stylesheets/staff.scss
+++ b/app/assets/stylesheets/staff.scss
@@ -170,9 +170,9 @@ table{
       }
   }
 
-  tr {
-      background-color: #f0f5f5;
-  }
+  //tr {
+  //    background-color: #f0f5f5;
+  //}
   tr.current-session {
       background-color: #b3e6cc;
   }
